# coffee

./: .env.example  .gitignore  .pylintrc  pyproject.toml  pytest.ini
.github/workflows/: pylint.yml
project/: __init__.py  manage.py  mypy.ini  pytest.ini
project/apps/coffee/: admin.py  apps.py  coffee_enums.py  models.py
project/apps/coffee/migrations/: 0001_initial.py
project/apps/coffee/templates/admin/: range_input.html
project/project/: asgi.py  settings.py  wsgi.py
project/tests/: factories.py  test_project.py
project/utils/: mypy_django_plugin_with_configuration_support.py  pylint_init_hook.py
tests/: conftest.py
